Screens: Create WynntilsMenuListScreen abstraction (#545)
* Screens: Create WynntilsMenuListScreen abstraction

* Bug fixes